# cute_print

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_and_test.yml
doc/: diagram.drawio
src/: lib.rs  main.rs
src/colors/: color_list.rs  mod.rs
src/colors/test/: color_list_test.rs  mod.rs
src/cute/: cute_p.rs  cute_text.rs  mod.rs
src/cute/test/: cute_p_test.rs  cute_text_test.rs  mod.rs
src/examples/: example_colors.rs  mod.rs
src/examples/test/: example_colors_test.rs  mod.rs
src/styles/: mod.rs  styles.rs
src/styles/test/: mod.rs  style_list_test.rs
src/terminal/: mod.rs  unix.rs  unsupported.rs  windows.rs
src/terminal/test/: mod.rs  terminal_test.rs  unix.rs  windows.rs
src/utils/: mod.rs
