[package]
name = "cute_print"
authors = ["Antonio Olvera <antonio.olvera.dev@gmail.com>"]
version = "0.2.1"
description = "An easy and beautiful way to print"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = ["./src/main.rs"]
repository = "https://github.com/antonio-olvera-dev/cute_print"
[dependencies]
