[package]
name = "cute_print"
authors = ["Antonio Olvera <antonio.olvera.dev@gmail.com>"]
version = "0.6.1"
description = "An easy and beautiful way to print"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = ["./src/main.rs"]
repository = "https://github.com/antonio-olvera-dev/cute_print"
documentation = "https://docs.rs/cute_print"
rust-version = "1.56"
keywords = ["CutePrint", "colored", "terminal", "console", "output"]
categories = ["console", "output", "terminal", "style", "cli"]
[dependencies]
[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2.139"
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["wincon", "processenv", "winbase"] }
